// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LargeLink /> should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.25rem;
  color: #005994;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f9f9fc;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  margin-bottom: 1.25rem;
  -webkit-transition: 250ms all;
  transition: 250ms all;
}

.c0:visited {
  color: #434956;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:hover {
  border-color: #005994;
  box-shadow: 0 5px 10px 0 #ebeff3;
}

<div>
  <a
    class="c0"
  >
    <div>
      Ok
    </div>
  </a>
</div>
`;

exports[`<LargeLink /> should render highlighted 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.25rem;
  color: #005994;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #005994;
  border-radius: 0.25rem;
  margin-bottom: 1.25rem;
  -webkit-transition: 250ms all;
  transition: 250ms all;
}

.c0:visited {
  color: #434956;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:hover {
  border-color: #005994;
  box-shadow: 0 5px 10px 0 #ebeff3;
}

<div>
  <a
    class="c0"
  >
    <div>
      Ok
    </div>
  </a>
</div>
`;

exports[`<LargeLink /> should render light 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.25rem;
  color: #005994;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  margin-bottom: 1.25rem;
  -webkit-transition: 250ms all;
  transition: 250ms all;
}

.c0:visited {
  color: #434956;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:hover {
  border-color: #005994;
  box-shadow: 0 5px 10px 0 #ebeff3;
}

<div>
  <a
    class="c0"
  >
    <div>
      Ok
    </div>
  </a>
</div>
`;
